material-addon/src/main/webapp/VAADIN/themes/material/components/v-select-twincol.scss
@mixin v-select-twincol {
    .v-select-twincol select:not(.borderless) {
        @extend .floating-border;
    }
    select.v-select-select:not(.borderless) {
        @extend .floating-border;
    }
    .v-select-twincol-buttons:not(.borderless) .v-button {
        @extend .z-depth-1;
    }
    .v-select-twincol-buttons {
        min-width: 4.5em;
    }
    .v-select-twincol-buttons .v-button {
        top: 0px;
    }
    .v-select-twincol {
        width: 25em !important;
    }
}

